--- a/.github/workflows/build-webpack.yml
+++ b/.github/workflows/build-webpack.yml
@@ -1,10 +1,5 @@
 name: webpack-umd-release-actions-workflow
-on:
-  push:
-    # Sequence of patterns matched against refs/tags
-    tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
-      - 'c*' # Push events to matching v*, i.e. v1.0, v20.15.10
+on: push
 
 jobs:
   build:
@@ -37,11 +32,11 @@ jobs:
             ${{ github.workspace }}\node-v18.12.1-win-x64;
             cd minimal-webpack-boilerplate &&^
             npm install ${{ env.npmlibraryName }} &&^
-            npx webpack --mode=production --output-library-type=umd --output-library-name=${{ env.outputUMDName }} --output-filename=${{ env.npmlibraryName }}.min.js
+            npx webpack --mode=production --output-library-type=umd --output-library-name=${{ env.outputUMDName }} --output-filename=${{ env.npmlibraryName }}.${{ env.version }}.min.js
             
       - name: Release prebuilt
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "minimal-webpack-boilerplate/dist/${{ env.npmlibraryName }}.${{ github.ref_name }}.min.js"
+          artifacts: "minimal-webpack-boilerplate/dist/${{ env.npmlibraryName }}.${{ env.version }}.min.js"
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
