--- a/.github/workflows/build-webpack.yml
+++ b/.github/workflows/build-webpack.yml
@@ -44,4 +44,4 @@ jobs:
           title: ${{ env.npmlibraryName }}.${{ env.version }}.min.js
           files: |
             "minimal-webpack-boilerplate/dist/${{ env.npmlibraryName }}.${{ env.version }}.min.js"
-            "*.wasm"
+            "minimal-webpack-boilerplate/dist/*.wasm"
