--- a/.github/workflows/build-webpack.yml
+++ b/.github/workflows/build-webpack.yml
@@ -6,11 +6,11 @@ jobs:
     name: Create Release
     runs-on: windows-latest
     env:
-      npmlibraryName: 'audiobuffer-to-wav'
-      version: 0.1.0
-      outputUMDName: audiobufferToWav
+      npmlibraryName: 'antlr4'
+      version: 4.12.0
+      outputUMDName: antlr4
       appendToWebpackCli: ''
-      exportFileName: 'audiobuffer-to-wav'
+      exportFileName: 'antlr4'
     steps:
       - name: git clone
         shell: cmd
