--- a/.github/workflows/build-webpack.yml
+++ b/.github/workflows/build-webpack.yml
@@ -6,11 +6,11 @@ jobs:
     name: Create Release
     runs-on: windows-latest
     env:
-      npmlibraryName: 'antlr4'
-      version: 4.12.0
-      outputUMDName: antlr4
+      npmlibraryName: quill-delta-to-markdown
+      version: 0.6.0
+      outputUMDName: quillDeltaToMarkdown
       appendToWebpackCli: ''
-      exportFileName: 'antlr4'
+      exportFileName: quill-delta-to-markdown
     steps:
       - name: git clone
         shell: cmd
