--- a/.github/workflows/build-webpack.yml
+++ b/.github/workflows/build-webpack.yml
@@ -6,11 +6,11 @@ jobs:
     name: Create Release
     runs-on: windows-latest
     env:
-      npmlibraryName: quilljs-renderer
-      version: 0.0.8
-      outputUMDName: quilljsRenderer
+      npmlibraryName: quill-delta-to-html
+      version: 0.12.1
+      outputUMDName: quillDeltaToHtml
       appendToWebpackCli: ''
-      exportFileName: quilljs-renderer
+      exportFileName: quill-delta-to-html
     steps:
       - name: git clone
         shell: cmd
