--- a/.github/workflows/build-webpack.yml
+++ b/.github/workflows/build-webpack.yml
@@ -6,11 +6,11 @@ jobs:
     name: Create Release
     runs-on: windows-latest
     env:
-      npmlibraryName: "@octokit/core"
-      version: 4.2.1
-      outputUMDName: octokitCore
+      npmlibraryName: "image-js"
+      version: 0.35.5
+      outputUMDName: imagejs
       appendToWebpackCli: ''
-      exportFileName: octokit-core
+      exportFileName: image-js
     steps:
       - name: git clone
         shell: cmd
@@ -35,7 +35,7 @@ jobs:
             ${{ github.workspace }}\node-v18.12.1-win-x64;
             cd minimal-webpack-boilerplate &&^
             npm install ${{ env.npmlibraryName }} &&^
-            npx webpack --mode=production ${{ env.appendToWebpackCli }} --output-library-type=umd --output-library-name=${{ env.outputUMDName }} --output-filename=${{ env.exportFileName }}.${{ env.version }}.min.js
+            npx webpack --mode=production ${{ env.appendToWebpackCli }} --output-library-type=var --output-library-name=${{ env.outputUMDName }} --output-filename=${{ env.exportFileName }}.${{ env.version }}.min.js
             
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
@@ -45,6 +45,4 @@ jobs:
           title: ${{ env.npmlibraryName }}.${{ env.version }}.min.js
           files: |
             minimal-webpack-boilerplate/dist/${{ env.exportFileName }}.${{ env.version }}.min.js
-            
-            
-# minimal-webpack-boilerplate/dist/*.wasm
+            minimal-webpack-boilerplate/dist/*.wasm
