--- a/.github/workflows/build-webpack.yml
+++ b/.github/workflows/build-webpack.yml
@@ -6,11 +6,11 @@ jobs:
     name: Create Release
     runs-on: windows-latest
     env:
-      npmlibraryName: "typeorm"
-      version: 0.3.20
-      outputVarName: typeorm
+      npmlibraryName: "query-string"
+      version: 9.0.0
+      outputVarName: query-string
       appendToWebpackCli: ''
-      exportFileName: typeorm
+      exportFileName: query-string
     steps:
       - name: git clone
         shell: cmd
