--- a/.github/workflows/build-webpack.yml
+++ b/.github/workflows/build-webpack.yml
@@ -14,6 +14,8 @@ jobs:
       appendToWebpackCli: ''
       exportFileName: mathjax
     steps:
+      - uses: actions/checkout@v4
+      
       - name: git clone
         shell: cmd
         run: git clone https://github.com/dirkarnez/minimal-webpack-boilerplate.git
@@ -29,6 +31,14 @@ jobs:
         run: |
           cd minimal-webpack-boilerplate && \
           echo "export * from \"${{ env.npmlibraryName }}\";" > src/index.js
+
+      - name: dummy webopack 5 config
+        shell: cmd
+        run: |
+          move webpack.config.js "minimal-webpack-boilerplate" &&^
+          cd minimal-webpack-boilerplate &&^
+          dir
+          
       
       # - name: write dummy index.js, advanced DO NOT REMOVE
       #   shell: sh
@@ -43,8 +53,8 @@ jobs:
             ${{ github.workspace }}\node-v18.12.1-win-x64;
             cd minimal-webpack-boilerplate &&^
             npm install ${{ env.npmlibraryName }} &&^
-            npx webpack --help &&^
-            npx webpack --mode=production ${{ env.appendToWebpackCli }} --output-library-type=var --output-library-name=${{ env.npmlibraryName }} --output-filename=${{ env.exportFileName }}.${{ env.version }}.var.min.js
+            npx webpack --help=verbose &&^
+            npx webpack --config webpack.config.js --mode=production ${{ env.appendToWebpackCli }} --output-library-type=var --output-library-name=${{ env.npmlibraryName }} --output-filename=${{ env.exportFileName }}.${{ env.version }}.var.min.js
 
       - if: ${{ matrix.type == 'esm' }}
         shell: cmd
@@ -53,8 +63,8 @@ jobs:
             ${{ github.workspace }}\node-v18.12.1-win-x64;
             cd minimal-webpack-boilerplate &&^
             npm install ${{ env.npmlibraryName }} &&^
-            npx webpack --help &&^
-            npx webpack --mode=production ${{ env.appendToWebpackCli }} --output-library-type=module --experiments-output-module --output-filename=${{ env.exportFileName }}.${{ env.version }}.esm.min.js
+            npx webpack --help=verbose &&^
+            npx webpack --config webpack.config.js --mode=production ${{ env.appendToWebpackCli }} --output-library-type=module --experiments-output-module --output-filename=${{ env.exportFileName }}.${{ env.version }}.esm.min.js
 
             
       - uses: "marvinpinto/action-automatic-releases@latest"
