--- a/.github/workflows/build-webpack.yml
+++ b/.github/workflows/build-webpack.yml
@@ -55,7 +55,7 @@ jobs:
             npm install ${{ env.npmlibraryName }} &&^
             npm i path-browserify &&^
             npx webpack --help=verbose &&^
-            npx webpack --resolve-fallback-name path:require.resolve('path-browserify') --mode=production ${{ env.appendToWebpackCli }} --output-library-type=var --output-library-name=${{ env.npmlibraryName }} --output-filename=${{ env.exportFileName }}.${{ env.version }}.var.min.js
+            npx webpack --resolve-fallback-alias path --resolve-fallback-name require.resolve('path-browserify') --mode=production ${{ env.appendToWebpackCli }} --output-library-type=var --output-library-name=${{ env.npmlibraryName }} --output-filename=${{ env.exportFileName }}.${{ env.version }}.var.min.js
 
       - if: ${{ matrix.type == 'esm' }}
         shell: cmd
@@ -66,7 +66,7 @@ jobs:
             npm install ${{ env.npmlibraryName }} &&^
             npm i path-browserify &&^
             npx webpack --help=verbose &&^
-            npx webpack --resolve-fallback-name path:require.resolve('path-browserify') --mode=production ${{ env.appendToWebpackCli }} --output-library-type=module --experiments-output-module --output-filename=${{ env.exportFileName }}.${{ env.version }}.esm.min.js
+            npx webpack --resolve-fallback-alias path --resolve-fallback-name require.resolve('path-browserify') --mode=production ${{ env.appendToWebpackCli }} --output-library-type=module --experiments-output-module --output-filename=${{ env.exportFileName }}.${{ env.version }}.esm.min.js
 
             
       - uses: "marvinpinto/action-automatic-releases@latest"
