--- a/.github/workflows/build-webpack.yml
+++ b/.github/workflows/build-webpack.yml
@@ -31,6 +31,7 @@ jobs:
       - name: write dummy index.js
         shell: sh
         run: |
+          cd minimal-webpack-boilerplate && \
           echo "export * from \"${{ env.npmlibraryName }}\";" > src/index.js
       
       # - name: write dummy index.js, advanced DO NOT REMOVE
