--- a/.github/workflows/build-webpack.yml
+++ b/.github/workflows/build-webpack.yml
@@ -12,7 +12,7 @@ jobs:
       npmlibraryName:  print-pdf
       version: 0.2.6
       appendToWebpackCli: ''
-      exportFileName:  printpdf
+      exportFileName:  print-pdf
     steps:
       - uses: actions/checkout@v4
 
